<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/share_screen">

    <ImageButton
        android:id="@+id/twitterButton"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="493dp"
        android:layout_marginEnd="269dp"
        android:layout_marginBottom="193dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/twitter_button_description"
        android:src="@drawable/twitter" />

    <ImageButton
        android:id="@+id/instagramButton"
        android:layout_width="54dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="274dp"
        android:layout_marginTop="493dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="195dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/instagram_button_description"
        android:src="@drawable/instagram" />

    <ImageButton
        android:id="@+id/facebookButton"
        android:layout_width="57dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="183dp"
        android:layout_marginTop="491dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="192dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/facebook_button_description"
        android:src="@drawable/facebook" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="357dp"
        android:layout_marginBottom="736dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/back_button_description"
        android:src="@drawable/poi_info_cancel_butt" />

    <ImageButton
        android:id="@+id/nextHuntButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/share_screen_next_hunt_butt"
        android:background="?android:attr/selectableItemBackground"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/next_hunt_button_description" />

</RelativeLayout>

